--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "@hookform/resolvers": "^3.3.4",
     "@next/third-parties": "^14.1.4",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@stripe/react-stripe-js": "^2.5.1",
     "@stripe/stripe-js": "^3.0.7",
@@ -36,8 +36,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "embla-carousel-autoplay": "^8.0.0-rc23",
-    "embla-carousel-react": "^8.0.0-rc23",
+    "embla-carousel-autoplay": "^8.4.0",
+    "embla-carousel-react": "^8.4.0",
     "firebase": "^10.8.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
@@ -60,7 +60,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.5",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-stars": "^2.2.5",
     "sonner": "^1.4.0",
